@@ -4,101 +4,100 @@
 <context>
     <name>QtGnuplotWindow</name>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="81"/>
-        <location filename="../QtGnuplotWindow.cpp" line="140"/>
+        <location filename="../QtGnuplotWindow.cpp" line="86"/>
+        <location filename="../QtGnuplotWindow.cpp" line="153"/>
         <source>Export to PDF</source>
         <translation>Exporter en PDF</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="140"/>
+        <location filename="../QtGnuplotWindow.cpp" line="153"/>
         <source>PDF files (*.pdf)</source>
         <translation>Fichiers PDF (*.pdf)</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="152"/>
+        <location filename="../QtGnuplotWindow.cpp" line="165"/>
         <source>Export to Image</source>
         <translation>Exporter en image</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="153"/>
+        <location filename="../QtGnuplotWindow.cpp" line="166"/>
         <source>Image files (*.png *.bmp)</source>
         <translation>Fichiers image (*.png *.bmp)</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="83"/>
-        <location filename="../QtGnuplotWindow.cpp" line="165"/>
+        <location filename="../QtGnuplotWindow.cpp" line="88"/>
+        <location filename="../QtGnuplotWindow.cpp" line="178"/>
         <source>Export to SVG</source>
         <translation>Exporter en SVG</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="165"/>
+        <location filename="../QtGnuplotWindow.cpp" line="178"/>
         <source>SVG files (*.svg)</source>
         <translation>Fichiers SVG (*.svg)</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="75"/>
         <source>Qt frontend for gnuplot</source>
-        <translation>Terminal Qt pour gnuplot</translation>
+        <translation type="obsolete">Terminal Qt pour gnuplot</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="78"/>
+        <location filename="../QtGnuplotWindow.cpp" line="83"/>
         <source>Copy to clipboard</source>
         <translation>Copier dans le presse papier</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="79"/>
+        <location filename="../QtGnuplotWindow.cpp" line="84"/>
         <source>Print</source>
         <translation>Imprimer</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="80"/>
+        <location filename="../QtGnuplotWindow.cpp" line="85"/>
         <source>Export</source>
         <translation>Exporter</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="82"/>
+        <location filename="../QtGnuplotWindow.cpp" line="87"/>
         <source>Export to EPS</source>
         <translation>Exporter en EPS</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="84"/>
+        <location filename="../QtGnuplotWindow.cpp" line="89"/>
         <source>Export to image</source>
         <translation>Exporter en image</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="85"/>
+        <location filename="../QtGnuplotWindow.cpp" line="90"/>
         <source>Settings</source>
         <translation>Préférences</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="102"/>
+        <location filename="../QtGnuplotWindow.cpp" line="107"/>
         <source>Replot</source>
         <translation>Redessiner</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="103"/>
+        <location filename="../QtGnuplotWindow.cpp" line="108"/>
         <source>Show grid</source>
         <translation>Montrer la grille</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="104"/>
+        <location filename="../QtGnuplotWindow.cpp" line="109"/>
         <source>Previous zoom</source>
         <translation>Zoom précédent</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="105"/>
+        <location filename="../QtGnuplotWindow.cpp" line="110"/>
         <source>Next zoom</source>
         <translation>Zoom suivant</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="106"/>
+        <location filename="../QtGnuplotWindow.cpp" line="111"/>
         <source>Autoscale</source>
         <translation>Échelle automatique</translation>
     </message>
     <message>
-        <location filename="../QtGnuplotWindow.cpp" line="218"/>
+        <location filename="../QtGnuplotWindow.cpp" line="264"/>
         <source>Gnuplot window </source>
-        <translation type="unfinished">Fenêtre gnuplot </translation>
+        <translation>Fenêtre gnuplot </translation>
     </message>
 </context>
 <context>
@@ -132,7 +131,32 @@ d&apos;arrière plan</translation>
     <message>
         <location filename="../QtGnuplotSettings.ui" line="71"/>
         <source>Rounded line ends</source>
-        <translation type="unfinished"></translation>
+        <translation>Extrémité des lignes arrondies</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="80"/>
+        <source>Mouse label</source>
+        <translation>Position du curseur</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="91"/>
+        <source>Status bar</source>
+        <translation>Barre d&apos;état</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="96"/>
+        <source>Tool bar</source>
+        <translation>Barre d&apos;outils</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="101"/>
+        <source>Inline</source>
+        <translation>Incrusté</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="106"/>
+        <source>None</source>
+        <translation>Aucune</translation>
     </message>
 </context>
 </TS>
